fix(gemini): 🐛 tmuxのアイコンが切り替わらない

--- a/ai/gemini/settings.json
+++ b/ai/gemini/settings.json
@@ -127,6 +127,28 @@
           }
         ]
       }
+    ],
+    "BeforeAgent": [
+      {
+        "matcher": "",
+        "hooks": [
+          {
+            "type": "command",
+            "command": "python3 ~/.gemini/hooks/gemini-hook.py BeforeAgent"
+          }
+        ]
+      }
+    ],
+    "SessionEnd": [
+      {
+        "matcher": "",
+        "hooks": [
+          {
+            "type": "command",
+            "command": "python3 ~/.gemini/hooks/gemini-hook.py SessionEnd"
+          }
+        ]
+      }
     ]
   },
   "_disabledMcpServers": {},
