--- a/ai/gemini/settings.json
+++ b/ai/gemini/settings.json
@@ -132,7 +132,7 @@
         "hooks": [
           {
             "type": "command",
-            "command": "python3 ~/.gemini/hooks/gemini-hook.py BeforeAgent"
+            "command": "python3 ~/.gemini/hooks/gemini-hook.py before_agent"
           }
         ]
       }
@@ -143,7 +143,7 @@
         "hooks": [
           {
             "type": "command",
-            "command": "python3 ~/.gemini/hooks/gemini-hook.py BeforeTool"
+            "command": "python3 ~/.gemini/hooks/gemini-hook.py before_tool"
           }
         ]
       }
@@ -154,7 +154,7 @@
         "hooks": [
           {
             "type": "command",
-            "command": "python3 ~/.gemini/hooks/gemini-hook.py SessionEnd"
+            "command": "python3 ~/.gemini/hooks/gemini-hook.py session_end"
           }
         ]
       }
