--- a/ai/gemini/settings.json
+++ b/ai/gemini/settings.json
@@ -15,7 +15,9 @@
       "run_shell_command(head)",
       "run_shell_command(tail)"
     ],
-    "exclude": ["dangerous_tool"],
+    "exclude": [
+      "dangerous_tool"
+    ],
     "sandbox": false,
     "shell": {
       "showColor": true
@@ -29,7 +31,11 @@
       "enabled": true
     },
     "enablePromptCompletion": true,
-    "previewFeatures": false
+    "previewFeatures": false,
+    "vimMode": true,
+    "sessionRetention": {
+      "enabled": true
+    }
   },
   "context": {
     "fileFiltering": {
@@ -46,7 +52,7 @@
     }
   },
   "ui": {
-    "theme": "Atom One",
+    "theme": "Dracula",
     "hideBanner": true,
     "hideTips": true,
     "showStatusInTitle": true,
@@ -62,7 +68,10 @@
   "mcpServers": {
     "sequential-thinking": {
       "command": "npx",
-      "args": ["-y", "@modelcontextprotocol/server-sequential-thinking"]
+      "args": [
+        "-y",
+        "@modelcontextprotocol/server-sequential-thinking"
+      ]
     },
     "serena": {
       "command": "/usr/local/bin/uvx",
@@ -77,19 +86,30 @@
     },
     "gitmcp": {
       "command": "npx",
-      "args": ["mcp-remote", "https://gitmcp.io/docs"]
+      "args": [
+        "mcp-remote",
+        "https://gitmcp.io/docs"
+      ]
     },
     "context7": {
       "command": "npx",
-      "args": ["-y", "@upstash/context7-mcp@latest"]
+      "args": [
+        "-y",
+        "@upstash/context7-mcp@latest"
+      ]
     },
     "playwright": {
       "command": "npx",
-      "args": ["@playwright/mcp@latest"]
+      "args": [
+        "@playwright/mcp@latest"
+      ]
     },
     "superagent": {
       "command": "npx",
-      "args": ["-y", "@superclaude-org/superagent"]
+      "args": [
+        "-y",
+        "@superclaude-org/superagent"
+      ]
     }
   },
   "output": {
